practica-services/namespace.yml
# Parte 1 - Crear Namespace
# kubectl apply -f namespace.yml
# kubectl get ns
apiVersion: v1
kind: Namespace
metadata:
  name: laboratorio-services
