practica-services/nodeport.yml
# Parte 4 - Service tipo NodePort
# kubectl apply -f nodeport.yml
# kubectl get svc -n laboratorio-services
# kubectl get nodes -o wide
apiVersion: v1
kind: Service
metadata:
  name: webapp-nodeport
  namespace: laboratorio-services
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    # Puerto lógico interno del Service, ej: http://webapp-clusterip:80
    - port: 80
      # Puerto interno del contenedor donde escucha la aplicación.
      # Kubernetes recibie trafico en "port"
      # y luego lo redirige a este puerto del Pod.
      targetPort: 80
      # Ej: http://192.168.49.2:30080
      # Rango permitido por nodeport es: 30000 - 32767
      nodePort: 30080
